<resources>
    <string name="app_name">AppMoviles192Jueves</string>
    <string name="plus">+</string>
    <string name="idTV">ID</string>
    <string name="nameTV">Name of album</string>
    <string name="dateTV">Date</string>
    <string name="createTaskListTV">Add Album</string>
    <string name="commitTasklistBTN">Create album</string>
    <string name="createTaskTV">Add photo</string>
    <string name="nameTaskTV">Name of photo</string>
    <string name="descTaskTV">Description</string>
    <string name="FkTV">Tasklist</string>
    <string name="lorem_title">Lorem ipsum</string>
    <string name="lorem_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</string>
    <string name="lorem_count">999 views</string>
    <string name="takePhotoBTN">Take picture</string>
    <string name="deleteButton">X</string>
    <string name="openGalBTN">Open galery</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_repassword">Vuelva a escribir la contraseña</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_mobile">Número de teléfono</string>
    <string name="label_age">Ingrese su fecha de nacimiento</string>
    <string name="registrarse">Registrarse</string>
    <string name="noUser">No soy usuario aún!</string>
    <string name="alreadyUser">Ya soy usuario!</string>
    <string name="atrasMsj">Atrás</string>
</resources>
