<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="50dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:background="#eee"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alreadyUser"
            android:layout_marginBottom="20dp"
            android:textSize="20dp"
            android:textAlignment="center"
            android:id="@+id/alreadyUserTV"
            />

        <EditText
            android:id="@+id/signin_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_email" />

        <EditText
            android:id="@+id/signin_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_name" />

        <EditText
            android:id="@+id/signin_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_username" />

        <EditText
            android:id="@+id/signin_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_mobile" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_age"/>

        <appmoviles.com.preclase13.view.custom.ScrolledDatePicker
            android:id="@+id/signin_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_password" />

        <EditText
            android:id="@+id/signin_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_repassword" />

        <Button
            android:id="@+id/login_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrarse" />

    </LinearLayout>
</ScrollView>