<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/createTaskTV"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/photoIdTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/idTV" />

        <EditText
            android:id="@+id/photoNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/nameTaskTV" />

        <EditText
            android:id="@+id/photoDescNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/descTaskTV" />

        <TextView
            android:id="@+id/photoFkTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/FkTV" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/takePhotoBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="40dp"
                android:hint="@string/takePhotoBTN" />

            <Button
                android:id="@+id/openGalBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="40dp"
                android:hint="@string/openGalBTN" />

        </LinearLayout>


        <ImageView
            android:id="@+id/pictureTaked"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop" />


        <Button
            android:id="@+id/photoCreateBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/createTaskTV" />

    </LinearLayout>
</ScrollView>