<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="50dp"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_launcher_foreground"
        android:background="#eee"
        android:layout_marginBottom="50dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/noUserYetTV"
        android:text="@string/noUser"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_email"
        android:hint="@string/hint_email"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:hint="@string/hint_password"
        android:layout_marginBottom="40dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_signin"
        android:text="@string/iniciar_sesion"/>

</LinearLayout>