<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/row_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#666"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/row_name"
                    android:text="@string/lorem_title"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:text="@string/lorem_count"
                    android:id="@+id/row_views"
                    android:textAlignment="textEnd"
                    android:textSize="20dp" />


            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/row_description"
                android:text="@string/lorem_content"
                android:textSize="20dp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/deletePhotoBtn"
        android:text="@string/deleteButton"/>

</RelativeLayout>